--- a/ClienteTwitter/src/interfaz/Principal.form
+++ b/ClienteTwitter/src/interfaz/Principal.form
@@ -308,13 +308,13 @@
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="jButtonRefresh" max="32767" attributes="0"/>
                           <Group type="102" attributes="0">
-                              <Group type="103" groupAlignment="2" attributes="0">
-                                  <Component id="jScrollPaneUserTimeline" alignment="2" max="32767" attributes="0"/>
-                                  <Component id="jLabelUserTL" alignment="2" max="32767" attributes="0"/>
-                              </Group>
-                              <EmptySpace type="separate" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="jScrollPaneHomeTL" max="32767" attributes="0"/>
+                                  <Component id="jScrollPaneUserTimeline" pref="312" max="32767" attributes="0"/>
+                                  <Component id="jLabelUserTL" alignment="0" max="32767" attributes="0"/>
+                              </Group>
+                              <EmptySpace max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="0" attributes="0">
+                                  <Component id="jScrollPaneHomeTL" pref="313" max="32767" attributes="0"/>
                                   <Component id="jLabelHomeTL" max="32767" attributes="0"/>
                               </Group>
                           </Group>
@@ -328,8 +328,8 @@
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="jLabelUserTL" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="jLabelHomeTL" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="jLabelUserTL" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
@@ -376,12 +376,6 @@
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonRefreshActionPerformed"/>
               </Events>
             </Component>
-            <Component class="javax.swing.JLabel" name="jLabelUserTL">
-              <Properties>
-                <Property name="horizontalAlignment" type="int" value="0"/>
-                <Property name="text" type="java.lang.String" value="User timeline"/>
-              </Properties>
-            </Component>
             <Container class="javax.swing.JScrollPane" name="jScrollPaneHomeTL">
               <AuxValues>
                 <AuxValue name="autoScrollPane" type="java.lang.Boolean" value="true"/>
@@ -402,6 +396,12 @@
               <Properties>
                 <Property name="horizontalAlignment" type="int" value="0"/>
                 <Property name="text" type="java.lang.String" value="Home timeline"/>
+              </Properties>
+            </Component>
+            <Component class="javax.swing.JLabel" name="jLabelUserTL">
+              <Properties>
+                <Property name="horizontalAlignment" type="int" value="0"/>
+                <Property name="text" type="java.lang.String" value="User timeline"/>
               </Properties>
             </Component>
           </SubComponents>
