--- a/ClienteTwitter/src/interfaz/Principal.form
+++ b/ClienteTwitter/src/interfaz/Principal.form
@@ -394,13 +394,13 @@
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Group type="102" attributes="0">
-                              <EmptySpace min="10" pref="10" max="-2" attributes="0"/>
-                              <Component id="jLabelAccionTT" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace max="32767" attributes="0"/>
-                          </Group>
-                          <Group type="102" attributes="0">
                               <Component id="jLabelTT" max="32767" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
+                          </Group>
+                          <Group type="102" alignment="0" attributes="0">
+                              <EmptySpace min="10" pref="10" max="-2" attributes="0"/>
+                              <Component id="jLabelAccionTT1" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace max="32767" attributes="0"/>
                           </Group>
                       </Group>
                   </Group>
@@ -412,8 +412,8 @@
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="jLabelTT" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                      <Component id="jLabelAccionTT" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace max="32767" attributes="0"/>
+                      <Component id="jLabelAccionTT1" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace pref="209" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -425,7 +425,7 @@
                 <Property name="text" type="java.lang.String" value="Trending topics"/>
               </Properties>
             </Component>
-            <Component class="jlabelaccion.JLabelAccion" name="jLabelAccionTT">
+            <Component class="jlabelaccion.JLabelAccion" name="jLabelAccionTT1">
               <Properties>
                 <Property name="text" type="java.lang.String" value="#namm2019"/>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
